# covert

./: .gitignore  NEW_CHAT_HANDOFF_CN.md  README.md  SESSION_HANDOFF.md  pyproject.toml  requirements.txt
data/examples/: room_comments.example.txt
data/profiles/online_style_profiles/: room_6_comments.txt  room_6_profile.json  room_7243837_comments.txt  (+1 more)
docs/handoff/: CODEX_CONTEXT_CHECKPOINT.md  PROJECT_RESTRUCTURE_2026-05-20.md  WORK_LOG.md
docs/manuscript/: paper_submission_4306_extracted.txt
docs/revision/: MANUSCRIPT_REVISION_TEXT.md  NEXT_REVISION_TASKS.md  RESEARCH_BASELINE.md  REVIEWER_RESPONSE_DRAFT.md  REVIEW_RESPONSE_PLAN.md  SECTION_II_REVISION.md  中文_审稿回复草稿.md  中文_审稿实验与回复说明.md  旧版多载体论文修改内容.md
experiments/: compact_embedding.py  comparative_benchmark.py  detectability_baseline.py  popular_style.py  room_adaptive_stealth.py  stealth_strategy.py  tradeoff_sweep.py
figures/: concealment_improvement_source.csv  danmaku_before_after_samples.json  make_concealment_improvement_chinese.py  make_danmaku_before_after_figure.py  make_danmaku_samples.py
scripts/bilibili/: fetch_room_comments.py  learn_ws_style.py  receive_ws_decode.py  send_browser_cdp.py
src/live_bullet_covert/: __init__.py  bilibili_ws.py  browser_cdp.py  llm_style_audit.py  online_style.py  receiver.py  room_style.py  send_policy.py  sender.py  style_gate.py
tests/: offline_baseline_test.py  test_browser_init.py  test_llm_style_audit.py  test_online_style.py  test_receiver_humanized.py  test_receiver_realtime_compact.py  test_sender_payload_modes.py  test_style_gate.py
(+28 files in other folders)
